--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/wallet_ic"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WalletApp"
-        tools:targetApi="31" />
+        android:theme="@style/SplashTheme"
+        tools:targetApi="31"
+
+        >
+        <activity
+            android:name="Activity.HomeActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
